# polagon

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  vercel.json
contracts/: Cargo.toml  README.md
contracts/polls/: Cargo.toml  lib.rs
contracts/prediction_market/: Cargo.toml  lib.rs
contracts/reputation/: Cargo.toml  lib.rs
docs/: tokenomics.md  whitepaper.md
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/create/: page.tsx
frontend/src/app/integrate/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/markets/[id]/: page.tsx
frontend/src/app/polls/: page.tsx
frontend/src/app/polls/[id]/: page.tsx
frontend/src/app/polls/create/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: ActivityFeed.tsx  BetPanel.tsx  ChainBadge.tsx  ConnectWalletButton.tsx  HexBadge.tsx  MarketCard.tsx  MarketsTicker.tsx  Navbar.tsx  OddsChart.tsx  PollCard.tsx  PollPanel.tsx  PoolDonut.tsx  Providers.tsx  SiteFooter.tsx
frontend/src/lib/: chain.ts  contracts.ts  env.ts  format.ts  hooks.ts  leaderboard-mock.ts  markets-mock.ts  markets.ts  notify.tsx  polls-mock.ts  types.ts  useTx.ts  wallet.tsx
frontend/src/lib/abi/: .gitkeep
scripts/: README.md  deploy.ts  package.json  seed.ts  tsconfig.json
