[package]
name = "reputation"
version = "0.1.0"
edition = "2021"
authors = ["Polagon"]
description = "Polagon Score — soulbound on-chain reputation for Portaldot prediction markets."
license = "MIT"

[dependencies]
ink = { version = "5.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "5.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
